# cv-wheelset-recognition

./: README.md
project/: ImportPreparation.m  ReadPlyClouds.m  TestImport.m  init_paths.m  pipeline.m
project/cgal/: README.cmake  README.md
project/cgal/Classification/: CMakeCache.txt  CMakeLists.txt.bak  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  classification  classification.cpp  cmake_install.cmake
project/cgal/Clear_shape/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  clear_shape  clear_shape.cpp  cmake_install.cmake  log.txt
project/cgal/Cut/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cut  cut.cpp
project/cgal/Detect_shape/: detect_shapes_ransac_VERSION0.1_FUNZIONANTE.cpp
project/cgal/Detect_shape/RG/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  detect_shapes_rg  detect_shapes_rg.cpp
project/cgal/Normals/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compute_onormals  compute_onormals.cpp
project/cgal/Outliers/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  outliers  outliers.cpp
project/cgal/Read_ply/: CMakeCache.txt  (+7 more)
project/fun/: avg_gap_var.m  baricenter.m  divide_ptclouds.m  estimate_normals.m  plot_cloud.m
project/ply/: cleardetect_190613a.ply  detect_190613a.ply  detect_190613a_log.txt  limits.ply  out_190613a.ply
(+37 files in other folders)
